[package]
name = "lr-pyxel"
version = "0.21.10"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
# The "lakka" feature is used to determine whether to create a Lakka build.
lakka = []

[dependencies]
rust-libretro-sys = "0.3.2"
pyo3 = { version = "0.29" }
pyo3-ffi = "0.29"
blip_buf = "0.1"
zip = { version = "8.1", default-features = false, features = ["deflate"] }
libc = "0.2"
ureq = "3.3"
pyxel-core = { git = "https://github.com/ShigeakiAsai/pyxel.git", branch = "lr-pyxel", package = "pyxel-core", features = ["sdl2_static", "no_headless_audio"] }

[build-dependencies]
pyo3-build-config = "0.29"
